WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60898
Silverlight: Selection via keyboard selects the entire plugin instead of the contents of a TextBox
https://bugs.webkit.org/show_bug.cgi?id=60898
Summary
Silverlight: Selection via keyboard selects the entire plugin instead of the ...
Anders Carlsson
Reported
2011-05-16 09:49:52 PDT
Silverlight: Selection via keyboard selects the entire plugin instead of the contents of a TextBox
Attachments
Patch
(1.83 KB, patch)
2011-05-16 09:50 PDT
,
Anders Carlsson
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-16 09:50:38 PDT
Created
attachment 93654
[details]
Patch
Anders Carlsson
Comment 2
2011-05-16 09:54:21 PDT
Committed
r86580
: <
http://trac.webkit.org/changeset/86580
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug