2011-05-16  Anders Carlsson  <andersca@apple.com>

Reviewed by Oliver Hunt.

        Silverlight: Selection via keyboard selects the entire plugin instead of the contents of a TextBox
        https://bugs.webkit.org/show_bug.cgi?id=60898
        <rdar://problem/9309903>

        Special-case Command-A and always return true, indicating that the plug-in handled the event.
        This matches WebKit1.

        * WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
        (WebKit::NetscapePlugin::platformHandleKeyboardEvent):


Canonical link: https://commits.webkit.org/76230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86580 268f45cc-cd09-0410-ab3c-d52691b4dbfc